# CoTaskLib

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
include/: CoTask.hpp  CoTaskLib.hpp
include/CoTaskLib/: Core.hpp  Ease.hpp  FlatHiveMap.hpp  LazyDeletionFlatMap.hpp  License.hpp  S3dAsyncTask.hpp  Scene.hpp  ScopedComponent.hpp  ScreenFade.hpp  Sequence.hpp  SimpleDialog.hpp  SimpleFade.hpp  Tween.hpp  Tween3D.hpp  Typewriter.hpp
tests/: .gitignore  CoTaskLibTests.sln
tests/CoTaskLibTests/: CMakeLists.txt  CoTaskLibTests.vcxproj  CoTaskLibTests.vcxproj.filters  Main.cpp
tests/CoTaskLibTests/App/: Resource.rc
